# Q4

Chainlit/chainlit-demo/: .gitignore  README.md  hello.py  hello1.py  main.py  pyproject.toml
Openai SDK/: 01_hello_agent.ipynb  AgentHandoffs.ipynb  Concepts_Callables_Generics.ipynb  Context_Handling.ipynb  DataClasses01.ipynb  Evil_Calculator.ipynb  Guardrails.ipynb  Litellm_SDK.ipynb  MutiAgenticPatterns.ipynb  OpenRouter_SDK.ipynb  Sessions.ipynb  Structured_output.ipynb  ToolCallOpenaiAgent.ipynb  Tracing.ipynb  context_openai_agents_sdk.ipynb
Q4 /Openai SDK/: ToolCallOpenaiAgent.ipynb
Quiz Practice/: Orchestration_Handoffs.ipynb  Tool_Use_Behaviour.ipynb  verbose_Agent_Runner.ipynb
UV/Fast-Api/: README.md  main.py  pyproject.toml
UV/Pydantic-fastapi/: README.md  main.py  pydantic1.py  pydantic2.py  pydantic3.py  pydantic4.py  pydantic5.py  pyproject.toml  test_chat.py
UV/console/: .gitignore  README.md  pyproject.toml
UV/console/src/console/: __init__.py  main.py
UV/simulation/: README.md  main.py  pyproject.toml
UV/terminal/: .env  README.md  main.py  pyproject.toml
